# trafficserver

./: CMakeLists.txt  configure.ac  tsConfig.cmake.in
doc/admin-guide/files/: records.config.en.rst  records.yaml.en.rst
example/cripts/: CMakeLists.txt  example1.cc
include/api/: ChunkedHandler.h  Metrics.h
include/cripts/: Connections.hpp  Crypto.hpp  Headers.hpp  Instance.hpp  Lulu.hpp  Plugins.hpp  Preamble.hpp  Time.hpp  Transaction.hpp  Urls.hpp
include/iocore/net/: AcceptOptions.h  SSLAPIHooks.h  SSLMultiCertConfigLoader.h
include/proxy/logging/: LogField.h
include/ts/: remap.h
include/tscore/: Allocator.h  HostLookup.h  ink_config.h.cmake.in  ink_file.h  ink_inet.h
include/tsutil/: Timing.h
iocore/: CMakeLists.txt
iocore/aio/: I_AIO.h  Makefile.am
iocore/cache/: CMakeLists.txt  Cache.cc  CacheHosting.cc  CacheRead.cc  CacheWrite.cc  I_CacheDefs.h  P_CacheHosting.h  P_CacheInternal.h
iocore/dns/: P_DNSConnection.h
iocore/eventsystem/: CMakeLists.txt  EventSystem.cc  IOBuffer.cc  I_EThread.h  I_Event.h  I_IOBuffer.h  I_IOStrategy.h  I_Lock.h  I_Thread.h  I_VIO.h  Lock.cc  Makefile.am  P_IOBuffer.h  P_UnixEThread.h  P_UnixEvent.h  UnixEThread.cc
iocore/eventsystem/unit_tests/: test_AsyncMutex.cc
iocore/hostdb/: CMakeLists.txt
iocore/io_uring/: I_IO_URING.h  Makefile.am  P_IO_URING.h  io_uring.cc
iocore/io_uring/unit_tests/: test_diskIO.cc
iocore/net/: CMakeLists.txt  EventIOStrategy.cc  IOUringNetVConnection.cc  I_EventIOStrategy.h  I_NetIOStrategy.h  I_NetProcessor.h  I_NetVConnection.h  Makefile.am  NetEvent.h  NetIOStrategy.cc  P_Connection.h  P_QUICNet.h  P_SSLNetProcessor.h  P_SSLNetVConnection.h  P_UDPNet.h  P_UnixNet.h  P_UnixNetVConnection.h  P_UnixUDPConnection.h  PreWarmManager.cc  PreWarmManager.h  ProxyProtocol.cc  QUICNetProcessor.cc  SSLNetVConnection.cc  Socks.cc  UnixNet.cc  UnixNetAccept.cc  UnixNetPages.cc  UnixNetProcessor.cc  UnixNetVConnection.cc  UnixUDPNet.cc  libinknet_stub.cc
iocore/net/unit_tests/: test_EventIOStrategy.cc
lib/: CMakeLists.txt
lib/swoc/: CMakeLists.txt  libswocConfig.cmake.in
mgmt/: RecordsConfig.cc
plugins/compress/: compress.cc
plugins/experimental/remap_stats/: remap_stats.cc
proxy/: CMakeLists.txt  Plugin.cc  PluginVC.cc
proxy/http/: CMakeLists.txt  HttpCacheSM.cc  HttpProxyServerMain.cc  HttpSM.cc  HttpTunnel.cc  HttpTunnel.h  Makefile.am  PreWarmManager.cc
proxy/http/unit_tests/: test_redirect_actions.cc
proxy/logging/: CMakeLists.txt  LogBuffer.cc  LogConfig.cc  LogObject.cc  LogObject.h
proxy/logging/unit-tests/: benchmark_LogObject.cc
src/api/: APIHooks.cc  CMakeLists.txt  ChunkedHandler.cc  HttpHookState.cc  InkAPI.cc  Makefile.am  Metrics.cc  test_Metrics.cc
src/cripts/: CMakeLists.txt  Connections.cc  Headers.cc
src/cripts/Bundles/: LogsMetrics.cc
src/iocore/: CMakeLists.txt
src/iocore/dns/: CMakeLists.txt
src/iocore/eventsystem/: UnixEThread.cc
src/iocore/net/: Connection.cc  NetHandler.cc  SSLAPIHooks.cc  SSLConfig.cc  SSLNetVConnection.cc  SSLUtils.cc  TLSSessionResumptionSupport.cc  UnixNetAccept.cc  UnixNetProcessor.cc  UnixNetVConnection.cc
src/mgmt/rpc/: CMakeLists.txt
src/proxy/: CMakeLists.txt
src/proxy/http/: HttpProxyServerMain.cc  HttpSM.cc
src/proxy/http/remap/: UrlRewrite.cc
src/proxy/logging/: LogAccess.cc
src/records/: CMakeLists.txt  RecCore.cc  RecHttp.cc  RecordsConfig.cc
src/tests/: CMakeLists.txt
src/traffic_crashlog/: Makefile.inc
src/traffic_layout/: Makefile.inc
src/traffic_logcat/: CMakeLists.txt  Makefile.inc
src/traffic_logstats/: Makefile.inc
src/traffic_quic/: quic_client.cc
src/traffic_server/: CMakeLists.txt  InkAPI.cc  Makefile.inc  PluginInit.cc  traffic_server.cc
src/tscore/: CMakeLists.txt  HostLookup.cc  Makefile.am  ink_queue.cc
src/tscore/unit_tests/: allocator_benchmark.cc
src/tscpp/util/: CMakeLists.txt
src/tsutil/: CMakeLists.txt
src/tsutil/unit_tests/: test_Timing.cc
tests/gold_tests/ats_probe/: ats_probe.bt
tests/gold_tests/cache/: conditional-get-hit.test.py
tests/gold_tests/cache/replay/: conditional-get-cache-hit.yaml
tests/gold_tests/post/: post-request-smuggle.test.py
tests/gold_tests/post/replay/: post_request_smuggle.replay.yaml
tools/benchmark/: CMakeLists.txt  benchmark_Timing.cc  benchmark_Timing_MT.cc
